--- a/addon/plugin.yml
+++ b/addon/plugin.yml
@@ -1,9 +1,11 @@
 ---
 name: PocketMusicAddonSimpleArea
-version: 0.2.0
+version: FOR0.2.0
 main: mcpepc\pocketmusic\addon\simplearea\PocketMusicAddonSimpleArea
 api:
 - 3.0.0
 description: A simple SimpleArea integration for PocketMusic ^0.x
+depend:
+- PocketMusic
 author: MCPE_PC
 ...
